unpackaged/main/default/objects/Encounter__c/Encounter__c.object-meta.xml
<CustomObject>
    <description>Scheduled appointments and completed encounters</description>
    <label>Encounter</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Encounter</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Encounters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>