unpackaged/main/default/objects/Encounter__c/fields/Department_Region__c.field-meta.xml
<CustomField>
    <fullName>Department_Region__c</fullName>
    <description>This is the region for the department</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Department Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>