unpackaged/main/default/objects/Encounter__c/fields/Department_Specialty__c.field-meta.xml
<CustomField>
    <fullName>Department_Specialty__c</fullName>
    <description>Department Specialty</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Department Specialty</label>
    <length>100</length>
    <type>Text</type>
</CustomField>