unpackaged/main/default/objects/Encounter__c/fields/MRN__c.field-meta.xml
<CustomField>
    <fullName>MRN__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MRN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>