unpackaged/main/default/objects/Encounter__c/fields/Service_Class__c.field-meta.xml
<CustomField>
    <fullName>Service_Class__c</fullName>
    <label>Service Class</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Outpatient</fullName>
            </value>
            <value>
                <fullName>Inpatient</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>