unpackaged/main/default/objects/Encounter__c/fields/Service_Department__c.field-meta.xml
<CustomField>
    <fullName>Service_Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Department where visit occurred</description>
    <label>Service Department</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Facility</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipName>Patient_Visits_Dep</relationshipName>
    <type>Lookup</type>
</CustomField>