unpackaged/main/default/objects/Encounter__c/fields/Visit_ID_External__c.field-meta.xml
<CustomField>
    <fullName>Visit_ID_External__c</fullName>
    <description>This is the unique identified for record coming from External systems (Encounter ID, ORC ID, etc.)</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Visit ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>