unpackaged/main/default/objects/Encounter__c/fields/Visit_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Visit_Type_Name__c</fullName>
    <description>Visit type (appointment, office visit, etc.)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Visit Type Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>